add parallax and run prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,10 @@
 {
-  "extends": "next/core-web-vitals",
+  "parser": "@typescript-eslint/parser",
+  "extends": "prettier",
   "rules": {
     "react/display-name": "off"
+  },
+  "parserOptions": {
+    "ecmaVersion": 2022
   }
 }
