--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "brunoluvizotto-v2",
   "private": true,
   "scripts": {
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -17,8 +18,11 @@
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
     "@types/styled-components": "^5.1.21",
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.5.1",
     "typescript": "4.5.5"
   }
 }
