--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-slide-fade-in": "^1.0.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
