--- a/package.json
+++ b/package.json
@@ -1,31 +1,45 @@
 {
   "name": "brunoluvizotto",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
-    "create-env": "printenv > .env",
-    "lint": "eslint src/ --ext .js --ext .jsx --ext .ts --ext .tsx",
-    "lint:fix": "yarn lint --fix",
-    "dev": "next dev",
-    "gcp-build": "next build",
-    "build": "next build && next export",
-    "start": "next start"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "start": "node --import tsx server.ts",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "next": "12.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-slide-fade-in": "^1.0.9",
-    "styled-components": "^5.3.3"
+    "@tailwindcss/vite": "^4.1.18",
+    "express": "^5.2.1",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "motion": "^12.29.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.4",
+    "react-icons": "^5.5.0",
+    "resend": "^6.9.1",
+    "tailwindcss": "^4.1.18",
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.10",
-    "@types/react": "^18.0.2",
-    "@types/styled-components": "^5.1.21",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
-    "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.5.1",
-    "typescript": "4.5.5"
+    "@eslint/js": "^9.39.1",
+    "@types/express": "^5.0.6",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.4",
+    "vite": "^7.2.4"
+  },
+  "resolutions": {
+    "typescript": "~5.9.3"
   }
 }
